# create-electron-wasm

./: .gitignore  package-lock.json  package.json
templates/common/renderer/src/components/ComponentExample/: ComponentExampleContent.json  ComponentExampleTemplate.jsx
templates/common/renderer/src/components/Footer/: FooterTemplate.jsx  FooterTemplate.tsx
templates/common/renderer/src/components/Layout/: LayoutTemplate.json
templates/common/renderer/src/components/MainBody/: MainBodyContent.json  MainBodyTemplate.jsx
templates/common/renderer/src/components/Menubar/: MenubarTemplate.jsx
templates/common/renderer/src/styles/: GlobalStylesContent.json  GlobalStylesTemplate.ts
templates/javascript/: electron.vite.config.js
templates/typescript/: tsconfig.node.json
templates/wasm/c/: CMakeLists.txt  Makefile  build.sh
templates/wasm/c/src/: main.c
templates/wasm/go/: build.sh  go.mod
templates/wasm/go/src/: main.go  utils.go  utils_test.go
templates/wasm/rust/: Cargo.toml  build.sh
templates/wasm/rust/src/: lib.rs  utils.rs
test/my-electron-app/: electron.vite.config.ts  tsconfig.json  tsconfig.web.json
test/my-electron-app/renderer/src/: App.tsx  AppTemplate.jsx
test/my-electron-app/renderer/src/components/ComponentExample/: ComponentExampleTemplate.tsx
test/my-electron-app/renderer/src/components/Footer/: Footer.tsx  FooterContent.json
test/my-electron-app/renderer/src/components/Layout/: Layout.tsx  LayoutTemplate.jsx
test/my-electron-app/renderer/src/styles/: GlobalStyles.ts
(+5 files in other folders)
